        - distinct => 1 with prefetch now groups by all columns
        - on_connect_do accepts a single string equivalent to a one
          element arrayref (RT#45159)
        - DB2 limit + offset now works correctly
        - Sybase now supports autoinc PKs (RT#40265)
        - Prefetch on joins over duplicate relations now works
          correctly (RT#28451)

0.08102 2009-04-30 08:29:00 (UTC)
        - Fixed two subtle bugs when using columns or select/as
          paired with a join (limited prefetch)
        - Fixed breakage of cdbi tests (RT#45551)
        - Some POD improvements

0.08101 2009-04-27 09:45:00 (UTC)
        - Fix +select, +as, +columns and include_columns being stripped
          by $rs->get_column
        - move load_optional_class from DBIx::Class::Componentised to
          Class::C3::Componentised, bump dependency
        - register_extra_source() now *really* fixed wrt subclassing
        - Added missing POD descriptions (RT#45195)
        - Fix insert() to not store_column() every present object column
        - Multiple Makefile.PL fixes

0.08100 2009-04-19 11:39:35 (UTC)
        - Todo out the register_extra_source test until after shipping

0.08099_08 2009-03-30 00:00:00 (UTC)
        - Fixed taint mode with load_namespaces
        - Putting IC::DateTime locale, timezone or floating_tz_ok attributes into
          extra => {} has been deprecated. The new way is to put these things
          directly into the columns definition
        - Switched MI code to MRO::Compat
        - Document db-side default_value caveats
        - Search_like() now warns to indicate deprecation in 0.09.
        - TxnScopeGuard left experimental state

0.08099_07 2009-02-27 02:00:00 (UTC)
        - multi-create using find_or_create rather than _related for post-insert
        - fix get_inflated_columns to check has_column_loaded
        - Add DBIC_MULTICREATE_DEBUG env var (undocumented, quasi-internal)
        - Fix up multi-create to: