@@ -31,6 +31,8 @@ Revision history for DBIx::Class
         - Sybase now supports autoinc PKs (RT#40265)
         - Prefetch on joins over duplicate relations now works
           correctly (RT#28451)
+        - "timestamp with time zone" columns (for Pg) now get inflated with a
+          time zone information preserved
 
 0.08102 2009-04-30 08:29:00 (UTC)
         - Fixed two subtle bugs when using columns or select/as
